--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,23 +28,37 @@ dist.jar=${dist.dir}/Pengaduan_Masyarakat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.commons-beanutils-1.8.2.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\commons-beanutils-1.8.2.jar
+file.reference.commons-beanutils-1.8.2.jar-1=library\\commons-beanutils-1.8.2.jar
 file.reference.commons-collections-3.2.1.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\commons-collections-3.2.1.jar
+file.reference.commons-collections-3.2.1.jar-1=library\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-1=library\\commons-digester-2.1.jar
 file.reference.commons-javaflow-20060411.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\commons-javaflow-20060411.jar
+file.reference.commons-javaflow-20060411.jar-1=library\\commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\commons-logging-1.1.jar
+file.reference.commons-logging-1.1.jar-1=library\\commons-logging-1.1.jar
 file.reference.groovy-all-1.7.5.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\groovy-all-1.7.5.jar
+file.reference.groovy-all-1.7.5.jar-1=library\\groovy-all-1.7.5.jar
 file.reference.jasperreports-5.0.0.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\jasperreports-5.0.0.jar
+file.reference.jasperreports-5.0.0.jar-1=library\\jasperreports-5.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
     ${file.reference.commons-beanutils-1.8.2.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-javaflow-20060411.jar}:\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.groovy-all-1.7.5.jar}:\
-    ${file.reference.jasperreports-5.0.0.jar}
+    ${file.reference.jasperreports-5.0.0.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar-1}:\
+    ${file.reference.commons-collections-3.2.1.jar-1}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-javaflow-20060411.jar-1}:\
+    ${file.reference.commons-logging-1.1.jar-1}:\
+    ${file.reference.groovy-all-1.7.5.jar-1}:\
+    ${file.reference.jasperreports-5.0.0.jar-1}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
