--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,18 +29,32 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.commons-beanutils-1.8.2.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\commons-beanutils-1.8.2.jar
 file.reference.commons-beanutils-1.8.2.jar-1=library\\commons-beanutils-1.8.2.jar
+file.reference.commons-beanutils-1.8.2.jar-2=support files\\library\\commons-beanutils-1.8.2.jar
+file.reference.commons-beanutils-1.8.2.jar-3=supportfiles\\library\\commons-beanutils-1.8.2.jar
 file.reference.commons-collections-3.2.1.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\commons-collections-3.2.1.jar
 file.reference.commons-collections-3.2.1.jar-1=library\\commons-collections-3.2.1.jar
+file.reference.commons-collections-3.2.1.jar-2=support files\\library\\commons-collections-3.2.1.jar
+file.reference.commons-collections-3.2.1.jar-3=supportfiles\\library\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\commons-digester-2.1.jar
 file.reference.commons-digester-2.1.jar-1=library\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-2=support files\\library\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-3=supportfiles\\library\\commons-digester-2.1.jar
 file.reference.commons-javaflow-20060411.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\commons-javaflow-20060411.jar
 file.reference.commons-javaflow-20060411.jar-1=library\\commons-javaflow-20060411.jar
+file.reference.commons-javaflow-20060411.jar-2=support files\\library\\commons-javaflow-20060411.jar
+file.reference.commons-javaflow-20060411.jar-3=supportfiles\\library\\commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\commons-logging-1.1.jar
 file.reference.commons-logging-1.1.jar-1=library\\commons-logging-1.1.jar
+file.reference.commons-logging-1.1.jar-2=support files\\library\\commons-logging-1.1.jar
+file.reference.commons-logging-1.1.jar-3=supportfiles\\library\\commons-logging-1.1.jar
 file.reference.groovy-all-1.7.5.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\groovy-all-1.7.5.jar
 file.reference.groovy-all-1.7.5.jar-1=library\\groovy-all-1.7.5.jar
+file.reference.groovy-all-1.7.5.jar-2=support files\\library\\groovy-all-1.7.5.jar
+file.reference.groovy-all-1.7.5.jar-3=supportfiles\\library\\groovy-all-1.7.5.jar
 file.reference.jasperreports-5.0.0.jar=D:\\Java Apps\\jasper\\File Pendukung\\library\\jasperreports-5.0.0.jar
 file.reference.jasperreports-5.0.0.jar-1=library\\jasperreports-5.0.0.jar
+file.reference.jasperreports-5.0.0.jar-2=support files\\library\\jasperreports-5.0.0.jar
+file.reference.jasperreports-5.0.0.jar-3=supportfiles\\library\\jasperreports-5.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -58,7 +72,21 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.jar-1}:\
     ${file.reference.groovy-all-1.7.5.jar-1}:\
     ${file.reference.jasperreports-5.0.0.jar-1}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.commons-beanutils-1.8.2.jar-2}:\
+    ${file.reference.commons-collections-3.2.1.jar-2}:\
+    ${file.reference.commons-digester-2.1.jar-2}:\
+    ${file.reference.commons-javaflow-20060411.jar-2}:\
+    ${file.reference.commons-logging-1.1.jar-2}:\
+    ${file.reference.groovy-all-1.7.5.jar-2}:\
+    ${file.reference.jasperreports-5.0.0.jar-2}:\
+    ${file.reference.commons-beanutils-1.8.2.jar-3}:\
+    ${file.reference.commons-collections-3.2.1.jar-3}:\
+    ${file.reference.commons-digester-2.1.jar-3}:\
+    ${file.reference.commons-javaflow-20060411.jar-3}:\
+    ${file.reference.commons-logging-1.1.jar-3}:\
+    ${file.reference.groovy-all-1.7.5.jar-3}:\
+    ${file.reference.jasperreports-5.0.0.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
